complete Security example

--- a/Ch03/Security/pom.xml
+++ b/Ch03/Security/pom.xml
@@ -70,6 +70,10 @@
             <artifactId>log4jdbc-remix</artifactId>
             <version>0.2.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -77,6 +81,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.security.SecurityApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
